Fixed clips page isotope overlap loading problem

--- a/css/creative.css
+++ b/css/creative.css
@@ -282,5 +282,9 @@ fieldset[disabled] .btn-primary.active {
 /* responsive media queries */
 
 @media (max-width: 768px) {
- 
+  .button-group{
+    display: block !important;
+    width: auto !important;
+    padding-bottom:10px;
+  }
 }
